# ftxui-gh

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
docs/: index.html  static.js  static.wasm  static.worker.js  sw.js
src/: main.cpp
